--- a/FrontEnd/public/css/global.css
+++ b/FrontEnd/public/css/global.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    font-family: "Bai Janjuree", sans-serif;
+    font-family: "Bai Jamjuree", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
