--- a/FrontEnd/src/pages/home/index.css
+++ b/FrontEnd/src/pages/home/index.css
@@ -97,7 +97,7 @@ main h2 {
 }
 
 main h3 {
-    font-size: 2.5rem;
+    font-size: 2.0rem;
 }
 
 /* Problem Section */
@@ -162,4 +162,61 @@ main h3 {
 
 .carousel-control.next {
     right: 10px;
+}
+
+/* Technology Section */
+.technology-section {
+    position: relative;
+    background: url('/FrontEnd/public/assets/images/blue_background.jpg') no-repeat center center/cover;
+    padding: 120px;
+}
+
+.technology-section h2 {
+    color: white;
+    margin-bottom: 24px;
+}
+
+.technology-section .subtitle {
+    color: #99c2dc;
+    font-size: 1.5rem;
+    margin-bottom: 43px;
+    max-width: 800px;
+}
+
+.technologies {
+    display: flex;
+    flex-direction: column;
+    gap: 4px
+}
+
+.technology {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 24px;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.technologies .minor-box {
+    display: flex;
+    gap: 4px;
+    align-self: center;
+}
+
+.technology p {
+    font-size: 1.5rem;
+    color: #666;
+    margin-top: 12px;
+}
+
+.technologies .greater-box {
+    display: flex;
+    gap: 4px;
+    width: 1200px;
+    align-self: center;
+}
+
+.technology p {
+    color: black;
 }
