--- a/FrontEnd/src/pages/home/index.css
+++ b/FrontEnd/src/pages/home/index.css
@@ -263,3 +263,58 @@ main h3 {
     background-color: #0056b3;
     color: white;
 }
+
+/* Public Section */
+.public-section {
+    position: relative;
+    background: url('/FrontEnd/public/assets/images/blue_background.jpg') no-repeat center center/cover;
+    padding: 120px;
+}
+
+.public-section h2 {
+    color: white;
+    margin-bottom: 12px;
+}
+
+.public-section .subtitle {
+    color: #99c2dc;
+    font-size: 1.5rem;
+    margin-bottom: 43px;
+    max-width: 800px;
+}
+
+.public-section .cards {
+    display: flex;
+    gap: 12px;
+}
+
+.public-section .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 411px;
+    max-height: 606px;
+    border-radius: 20px;
+    background-color: #f8f8f8;
+    padding: 20px 20px 40px 20px;
+}
+
+.public-section img {
+    width: 350px;
+    height: 300px;
+    background-color: white;
+    border-radius: 20px;
+    margin-bottom: 24px;
+}
+
+.public-section h4 {
+    font-size: 1.6rem;
+    margin-bottom: 12px;
+}
+
+
+.public-section p {
+    font-size: 1.25rem;
+    height: 175px;
+}
