--- a/FrontEnd/src/pages/home/index.css
+++ b/FrontEnd/src/pages/home/index.css
@@ -318,3 +318,40 @@ main h3 {
     font-size: 1.25rem;
     height: 175px;
 }
+
+/* Benefits Section */
+
+.benefits-section {
+    padding: 120px;
+}
+
+.benefits-section h2 {
+    margin-bottom: 24px;
+}
+
+.benefits-section .subtitle{
+    font-size: 1.5rem;
+    max-width: 810px;
+    color: #666;
+    margin-bottom: 48px;
+}
+
+.benefits {
+    display: flex;
+    gap: 4px;
+}
+
+.benefit {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-width: 557px;
+    background-color: #F8F8F8;
+    border-radius: 10px;
+    padding: 24px;
+}
+
+.benefit p {
+    margin-top: 12px;
+    font-size: 1.5rem;
+}
