--- a/FrontEnd/src/pages/home/index.css
+++ b/FrontEnd/src/pages/home/index.css
@@ -377,3 +377,72 @@ main h3 {
     font-size: 1.5rem;
     max-width: 835px;
 }
+
+/* FAQ */
+
+.faq {
+    padding: 120px;
+}
+
+.faq h2 {
+    margin-bottom: 48px;
+}
+
+.faq .cards {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.faq .card {
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.question {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 2.3rem;
+    padding: 32px;
+    background-color: #F8F8F8;
+    cursor: pointer;
+}
+
+.question:hover {
+    background-color: #e9e9e9;
+}
+
+.toggle-sign-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 64px;
+    height: 64px;
+    background-color: black;
+    border-radius: 50%;
+}
+
+.toggle-sign {
+    color: white;
+    font-size: 1.8rem;
+    transition: transform 0.3s;
+}
+
+.answer {
+    font-size: 1.5rem;
+    padding: 32px;
+    display: none;
+    animation: slideDown 0.3s forwards;
+}
+
+@keyframes slideDown {
+    from {
+        opacity: 0;
+        max-height: 0;
+    }
+    to {
+        opacity: 1;
+        max-height: 100px; /* adjust as needed */
+    }
+}
