--- a/FrontEnd/src/pages/home/index.css
+++ b/FrontEnd/src/pages/home/index.css
@@ -95,6 +95,46 @@ nav ul li .line {
     background-color: white;
 }
 
+.hamburger-menu {
+    display: none;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 2rem;
+    height: 2rem;
+    cursor: pointer;
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    z-index: 2;
+}
+
+.hamburger-menu span {
+    width: 2rem;
+    height: 0.25rem;
+    background: white;
+    transition: all 0.3s ease;
+}
+
+nav.show {
+    display: flex;
+}
+
+nav.show {
+    display: flex;
+}
+
+.hamburger-menu.open span:nth-child(1) {
+    transform: rotate(45deg) translateY(0.5rem);
+}
+
+.hamburger-menu.open span:nth-child(2) {
+    opacity: 0;
+}
+
+.hamburger-menu.open span:nth-child(3) {
+    transform: rotate(-45deg) translateY(-0.5rem);
+}
+
 /* main */
 main h2 {
     word-wrap: break-word;
@@ -615,8 +655,27 @@ body.no-scroll {
 }
 
 @media (max-width: 75rem) { /* 1200px */
-    header nav {
+    .hamburger-menu {
+        display: flex;
+    }
+
+    nav {
         display: none;
+        flex-direction: column;
+        align-items: center;
+        background-color: rgba(0, 0, 0, 0.9);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        z-index: 1;
+        padding-top: 5rem;
+    }
+
+    nav ul {
+        flex-direction: column;
+        gap: 2rem;
     }
 }
 
